Changing file type
Because

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 	<script language="javascript">
 		function playSong1()
 		{
-			document.getElementById("embed").innerHTML="<embed src='LIG.m4a' autostart=true loop=false volume=100 hidden=true>";
+			document.getElementById("embed").innerHTML="<embed src='LIG.mp3' autostart=true loop=false volume=100 hidden=true>";
 			return true;
 		}
 	</script>
