--- a/www/index.html
+++ b/www/index.html
@@ -30,13 +30,17 @@
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" /> --> -->
+        <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
         <title>Play Songs!</title>
     </head>
     <body>
-		<button type="button" onclick=playSong1()>Song #1</button>
-		<button type="button" onclick=playSong1()>Song #2</button>
-        <<!-- div class="app">
+		<audio controls>
+			<source src="LIG.mp3" type="audio/mpeg">
+			<embed height="50" width="100" src="LIG.mp3">
+		</audio>
+		<!-- <button type="button" onclick=playSong1()>Song #1</button>
+		<button type="button" onclick=playSong1()>Song #2</button> -->
+        <!-- div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
