Adding second mp3
Testing to see if audio controls works

--- a/www/index.html
+++ b/www/index.html
@@ -31,12 +31,16 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
-        <title>Play Songs!</title>
+        <title>2 Completely Random mp3 Files!</title>
     </head>
     <body>
 		<audio controls>
 			<source src="LIG.mp3" type="audio/mpeg">
 			<embed height="50" width="100" src="LIG.mp3">
+		</audio>
+		<audio controls>
+			<source src="dogs.mp3" type="audio/mpeg">
+			<embed height="50" width="100" src="dogs.mp3">
 		</audio>
 		<!-- <button type="button" onclick=playSong1()>Song #1</button>
 		<button type="button" onclick=playSong1()>Song #2</button> -->
